# wbl-robot

./: .env.sample  .gitignore  Cargo.toml  README.md
mock/: http-client.env.json  request.http
src/: lib.rs  main.rs
src/global/: mod.rs
src/request/: mod.rs
src/response/: mod.rs
src/url/: mod.rs
