[package]
name = "wbl-robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
mongodb = "2.3.1"
rand = "0.8.5"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1", features = ["full"] }
